--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:SgUP+DbxA3qs5LWHhgFZTx9PYQTdg4bK5LNTomPC6yg=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
