--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "mpociot/laravel-firebase-sync": "^1.0",
-        "firebase/php-jwt": "~2.0",
-        "eelkevdbos/firebase-php": "dev-master"
+        "firebase/php-jwt": "^2.0",
+        "kreait/firebase-php": "^3.3",
+        "guzzlehttp/guzzle": "^6.0",
+        "google/cloud": "^0.40.0"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
