--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "firebase/php-jwt": "^2.0",
         "kreait/firebase-php": "^3.3",
         "guzzlehttp/guzzle": "^6.0",
-        "google/cloud": "^0.40.0"
+        "google/cloud": "0.40",
+        "google/gax": "0.24"
 
     },
     "require-dev": {
